# mcp-intentful-agent

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Mcp_intentful_agent_demo.mov  README.md  chat_ui.py  readme.md  requirements.txt  run_demo.sh
agent_service/: pyproject.toml
agent_service/src/agent_service/: __init__.py  agent.py  app.py  eval_harness.py  llm_adapter.py  logging_setup.py  mcp_client.py
backend/: main.py  pyproject.toml
mcp_server/: pyproject.toml
mcp_server/src/mcp_server/: __init__.py  backend_client.py  errors.py  logging_setup.py  server.py
