[project]
name = "mock-backend"
version = "0.1.0"
description = "Mock backend simulating an existing orders API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mock-backend = "main:run"

